package edu.hitsz.supply;

/**
 * @author Yangxin Wu
 * @date 2025/10/8 20:35
 */
public interface BombObserver {
    void OnBombActivated();
}

